# debug-libpqxx

./: .gitmodules  CMakeLists.txt  README.md  build-and-run
src/: CMakeLists.txt  main.cpp
